--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,38 +1,77 @@
-.App {
-  text-align: center;
+:root {
+  --pur-1: #421C52;
+  --pur-2: #732C7B;
+  --pur-3: #9C8AA5;
+  --pur-4: #BDAEC6;
+  --pur-5: #FFFFFF;
+
+}
+* {
+  margin: 0;
+  padding: 0;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  text-decoration: none;
+  cursor: url(../public/icons8-edit-30.png), auto;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+body {
+  width: 100%;
+  height: 100vh;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  background-image: linear-gradient(6deg, #214, #000);
+  color: var(--pur-5);
 }
 
-.App-link {
-  color: #61dafb;
+.container {
+  width: 80%;
+  height: auto;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.form-control,.modal-body input {
+  margin: 0 1rem;
+}
+.form-control:focus{
+  box-shadow: var(--pur-5) 0px 0px 10px;
+}
+
+table,th,td {
+  color: var(--pur-5);
+}
+
+tr{
+  border: 1px solid var(--pur-5);
+margin: 2rem;
+}
+
+.btn {
+  background-image: linear-gradient(to right, var(--pur-1) 0%, var(--pur-3) 51%, var(--pur-1) 100%);
+  color: var(--pur-5);
+  border: 2px solid var(--pur-5);
+  transition: 0.5s;
+  transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+  background-size: 200% auto;
+
+}
+
+.btn:hover {
+  background-position: right center;
+  color: var(--pur-5);
+  border: 2px solid var(--pur-5);
+
+} 
+
+.btn-success:hover,td button:hover {
+  box-shadow: var(--pur-5) 0px 0px 10px;
+}
+
+.modal-content{
+  background-image: linear-gradient(6deg, #214, #000);
+  color: var(--pur-5);
+}
+
+button.btn-close{
+  color: var(--pur-5) !important;
+
 }
