--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,10 +1,9 @@
 :root {
-  --pur-1: #421C52;
-  --pur-2: #732C7B;
-  --pur-3: #9C8AA5;
-  --pur-4: #BDAEC6;
-  --pur-5: #FFFFFF;
-
+  --pur-1: #421c52;
+  --pur-2: #732c7b;
+  --pur-3: #9c8aa5;
+  --pur-4: #bdaec6;
+  --pur-5: #ffffff;
 }
 * {
   margin: 0;
@@ -29,49 +28,55 @@ body {
   height: auto;
 }
 
-.form-control,.modal-body input {
+.form-control,
+.modal-body input {
   margin: 0 1rem;
 }
-.form-control:focus{
+.form-control:focus {
   box-shadow: var(--pur-5) 0px 0px 10px;
 }
 
-table,th,td {
+table,
+th,
+td {
   color: var(--pur-5);
 }
 
-tr{
+tr {
   border: 1px solid var(--pur-5);
-margin: 2rem;
+  margin: 2rem;
 }
 
 .btn {
-  background-image: linear-gradient(to right, var(--pur-1) 0%, var(--pur-3) 51%, var(--pur-1) 100%);
+  background-image: linear-gradient(
+    to right,
+    var(--pur-1) 0%,
+    var(--pur-3) 51%,
+    var(--pur-1) 100%
+  );
   color: var(--pur-5);
   border: 2px solid var(--pur-5);
   transition: 0.5s;
-  transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+  transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
   background-size: 200% auto;
-
 }
 
 .btn:hover {
   background-position: right center;
   color: var(--pur-5);
   border: 2px solid var(--pur-5);
+}
 
-} 
-
-.btn-success:hover,td button:hover {
+.btn-success:hover,
+td button:hover {
   box-shadow: var(--pur-5) 0px 0px 10px;
 }
 
-.modal-content{
+.modal-content {
   background-image: linear-gradient(6deg, #214, #000);
   color: var(--pur-5);
 }
 
-button.btn-close{
+button.btn-close {
   color: var(--pur-5) !important;
-
 }
