--- a/client/src/App.css
+++ b/client/src/App.css
@@ -13,7 +13,7 @@
   box-sizing: border-box;
   text-decoration: none;
   cursor: url(../public/icons8-edit-30.png), auto;
-  /* cursor: none; */
+  cursor: none;
 }
 
 body {
@@ -85,13 +85,26 @@ button.btn-close {
 }
 
 .cursor {
-  background-color: rgba(255, 255, 255, 0.3);
+  background-color: rgba(255, 255, 255, 0.4);
   filter: blur(8px);
-  height: 10rem;
-  width: 10rem;
+  height: 6.5rem;
+  width: 6.5rem;
   border-radius: 50%;
   position: fixed;
   top: 0;
   left: 0;
   pointer-events: none;
+  box-shadow: 0px 0px 0px 15px rgba(255, 255, 255, 0.2);
+}
+
+.inner-circle {
+  height: 1.5rem;
+  width: 1.5rem;
+  filter: blur(8px);
+  border-radius: 50%;
+  background-color: rgba(255, 255, 255, 0.9);
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
